DOCSP-764: Fix Jumping on Tutorials

--- a/themes/mongodb-tutorials/src/styles/base.scss
+++ b/themes/mongodb-tutorials/src/styles/base.scss
@@ -1,4 +1,5 @@
 @import 'colors';
+@import 'constants';
 
 * {
   box-sizing: border-box;
@@ -45,6 +46,18 @@ h4 {
   font-weight: normal;
   line-height: 24px;
   margin-bottom: 10px;
+}
+
+h1:before,
+h2:before,
+h3:before,
+h4:before {
+  content: '';
+  display: block;
+  height: $navbar-height;
+  margin-top: -$navbar-height;
+  position: relative;
+  width: 0;
 }
 
 // Label
@@ -103,7 +116,7 @@ a {
 .gssb_c {
   z-index: 10000 !important;
   left: 330px !important;
-  top: 45px !important;
+  top: $navbar-height !important;
 }
 
 .gsc-input input.gsc-input.navbar-search {
