--- a/themes/mongodb-tutorials/src/styles/bem-components/main.scss
+++ b/themes/mongodb-tutorials/src/styles/bem-components/main.scss
@@ -1,6 +1,6 @@
 @import '../colors';
+@import '../constants';
 
-$navbar-height: 45px;
 $sidebar-width: 330px;
 
 .main {
